--- a/2_Ще_трохи_математики.ipynb
+++ b/2_Ще_трохи_математики.ipynb
@@ -1,21 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "2. Ще трохи математики",
-      "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -41,6 +24,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -48,22 +32,21 @@
         "id": "csfYPusD0mWX",
         "outputId": "2fd0d9e4-9440-49e1-ea07-47c68f7b5a09"
       },
-      "source": [
-        "from math import sqrt,pi\n",
-        "S = float(input('Введіть площу кола: '))\n",
-        "r = sqrt(S/pi)\n",
-        "print ('Радіус дорівнює %6.3f см' %r)"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Введіть площу кола: 25\n",
             "Радіус дорівнює  2.821 см\n"
           ]
         }
+      ],
+      "source": [
+        "from math import sqrt,pi\n",
+        "S = float(input('Введіть площу кола: '))\n",
+        "r = sqrt(S/pi)\n",
+        "print ('Радіус дорівнює %6.3f см' %r)"
       ]
     },
     {
@@ -84,14 +67,29 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "id": "sTFMO4Xp3fgO"
       },
-      "source": [
-        ""
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Площа дорівнює 314.159 см\n",
+            "Об'єм дорівнює 523.599 см\n"
+          ]
+        }
       ],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "from math import sqrt,pi\n",
+        "\n",
+        "R = float(input('Введіть радіус кола: '))\n",
+        "S = 4 * pi * R**2\n",
+        "print ('Площа дорівнює %6.3f см' %S)\n",
+        "V = (4/3) * pi * R**3\n",
+        "print (\"Об'єм дорівнює %6.3f см\" %V)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -111,14 +109,31 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
       "metadata": {
         "id": "8yhfAwYm5E_z"
       },
-      "source": [
-        ""
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Введена вами температура у градусах Фаренгейта: 212.00\n",
+            "Введена вами температура у градусах Цельсія: 148.90\n"
+          ]
+        }
       ],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "C = float(input(\"Введіть температуру у градусах Цельсія: \"))\n",
+        "F = C * 1.8 + 32\n",
+        "print (\"Введена вами температура у градусах Фаренгейта: %6.2f\" %F)\n",
+        "\n",
+        "F = float(input(\"Введіть температуру у градусах Фаренгейта: \"))\n",
+        "C = (F - 32)*0.5556\n",
+        "print (\"Введена вами температура у градусах Цельсія: %6.2f\" %C)\n",
+        "\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -128,6 +143,37 @@
       "source": [
         "Ще більше простих вправ з Python - [тут](https://www.w3resource.com/python-exercises/python-basic-exercises.php)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "2. Ще трохи математики",
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.8"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
